RESOLVED FIXED143118
Relevant repainted objects callback is inaccurate and inconsistent for PDF documents
https://bugs.webkit.org/show_bug.cgi?id=143118
Summary Relevant repainted objects callback is inaccurate and inconsistent for PDF do...
Beth Dakin
Reported 2015-03-26 15:34:25 PDT
The relevant repainted objects callback is inaccurate and inconsistent for PDF documents. Its behavior varies with window size and window focus. rdar://problem/13371582
Attachments
Patch (4.58 KB, patch)
2015-03-26 15:43 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-03-26 15:43:51 PDT
Beth Dakin
Comment 2 2015-03-26 16:07:28 PDT
Note You need to log in before you can comment on or make changes to this bug.